5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_1330.log
== TEST (2019-03-16 21:36:59) 
-- CODE:
total=250
namig=6
int=total/namig
print(int)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:37:01) 
-- CODE:
total=250
namig=6
int=total/namig
print(int)
-- EXECUTION TIME:
0.145892
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:37:40) 
-- CODE:
total=250
namig=6
int=total/namig
round(x,2)
print(int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:38:08) 
-- CODE:
total=250
namig=6
int=total/namig

print(int(round(x,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(round(x,2)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:38:24) 
-- CODE:
total=250
namig=6
int=total/namig


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(round(x,2)))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:38:32) 
-- CODE:
total=250
namig=6
int=total/namig
print(int)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:38:53) 
-- CODE:
total=250
namig=6
x=6
int=total/namig
print(int(round(x,2)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(round(x,2)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:39:36) 
-- CODE:
total=250
namig=6
x=6
int=total/namig
print(round(int,2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:39:40) 
-- CODE:
total=250
namig=6
x=6
int=total/namig
print(round(int,2))


-- EXECUTION TIME:
0.19853
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:42:18) 
-- CODE:
total=250
namig=6
x=6
int=total/namig
print(round(int,2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:42:26) 
-- CODE:
total=250
namig=6
int=total/namig
print(round(int,2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:42:31) 
-- CODE:
total=250
namig=6
int=total/namig
print(round(int,2))


-- EXECUTION TIME:
0.170679
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:58:36) 
-- CODE:
total=250
namig=6
int=total/namig
print(round(int,2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:58:52) 
-- CODE:
total=250
namig=6
x=int(total/namig+
print(round(x,2))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:58:58) 
-- CODE:
total=250
namig=6
x=int(total/namig+
print(round(x,2))
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:59:08) 
-- CODE:
total=250
namig=6
x=int(total/namig)
print(round(x,2))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:00:41) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2)
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:01:10) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2)
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:01:16) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2)0
-- ERROR:
File "XXXX", line 4
    print(round(int, 2)0
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:01:19) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2)
		0
-- ERROR:
File "XXXX", line 5
    0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:01:24) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:01:26) 
-- CODE:
namig=6
valortotal=250
int=(valortotal/namig)
print(round(int, 2))
-- EXECUTION TIME:
0.246236
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
